drag point not segment

--- a/templates/view.html
+++ b/templates/view.html
@@ -234,7 +234,7 @@ Project $master.fontname
       return;
     }
     box.position = event.point;
-    currentsegment.position = event.point;
+    currentsegment.point = event.point;
   }
 </script>
 
