--- a/templates/view.html
+++ b/templates/view.html
@@ -232,7 +232,6 @@ Project $master.fontname
       var x = event.point.x;
       var y = event.point.y - 200;
       var xycoord = restore_original_coords(new Point(x, y));
-      console.log(xycoord);
 
       jQuery.post('', {
         pointnr: currentpointnr,
@@ -319,12 +318,6 @@ Project $master.fontname
     pathes.push(path);
   }
 
-  var circle = new Path.Circle({
-    center: new Point(306.0, 714- 419.0),
-    radius: 10,
-    fillColor: 'red', 
-  });
-
   var currentSegment, mode, type, pointnumber, pathnumber;
 
   function restore_original_coords(point) {
@@ -344,13 +337,45 @@ Project $master.fontname
     box.rotate(1);
   }
 
+  var currentsegment = null;
+  var currentpointnr = null;
+
   function onMouseDown(event) {
     for (var k = 0; k < pathes.length; k++) {
       var point = pathes[k].getNearestPoint(event.point);
       if ((event.point - point).length < 5) {
         box.position = point;
+        currentsegment = path;
+        currentpointnr = k + 1;
+        console.log(currentsegment.position);
         break;
       };
     }
+  }
+
+  function onMouseUp(event) {
+    if (currentsegment) {
+      console.log(currentpointnr);
+
+      var x = event.point.x;
+      var y = event.point.y - 200;
+      var xycoord = restore_original_coords(new Point(x, y));
+
+      jQuery.post('', {
+        pointnr: currentpointnr,
+        x: xycoord.x,
+        y: 500 - xycoord.y,
+        source: 'a'
+      });
+    }
+    currentsegment = currentpointnr = null;
+  }
+
+  function onMouseMove(event) {
+    if (!currentsegment) {
+      return;
+    }
+    box.position = event.point;
+    currentsegment.position = event.point;
   }
 </script>
