fix saving for fontsource B

--- a/templates/view.html
+++ b/templates/view.html
@@ -365,7 +365,7 @@ Project $master.fontname
         pointnr: currentpointnr,
         x: xycoord.x,
         y: 500 - xycoord.y,
-        source: 'a'
+        source: 'b'
       });
     }
     currentsegment = currentpointnr = null;
