--- a/templates/view.html
+++ b/templates/view.html
@@ -154,6 +154,7 @@ Project $master.fontname
   }
 
   var edges = EDGE_JSON.edges;
+  var glyphpaths = [];
   for (var i = 0; i < edges.length; i++) {
       for (var j = 0; j < edges[i].contours.length; j++) {
           var path = new Path();
@@ -175,6 +176,7 @@ Project $master.fontname
               brightness: 1,
               alpha: 0.5
           };
+          glyphpaths.push(path);
       }
   }
 
@@ -188,8 +190,6 @@ Project $master.fontname
     var path = new Path.Rectangle(point, 1);
     path.closed = true;
     path.selected = true;
-//    path.fullySelected = true;
-//    path.strokeColor = new Color(0.5, 0, 0.5);
     path.position.y += +200;
     path.data.pointnr = JSON.points[i].pointnr;
     pathes.push(path);
@@ -207,11 +207,6 @@ Project $master.fontname
       strokeWidth: '5'
   };
 
-//  function onFrame(event) {
-    // Each frame, rotate the copy by 1 degree:
- //   box.rotate(1);
- // }
-
   var currentsegment = null;
   var currentpointnr = null;
 
@@ -222,8 +217,6 @@ Project $master.fontname
         box.position = point;
         currentsegment = pathes[k];
         currentpointnr = k + 1;
-
-        console.log(point);
         box.position = point;
         return;
       };
@@ -232,10 +225,6 @@ Project $master.fontname
 
   function onMouseUp(event) {
     if (currentsegment) {
-      // console.log(currentpointnr);
-      console.log(event.point);
-      console.log(currentsegment.data.pointnr);
-
       var x = event.point.x;
       var y = event.point.y - 200;
       var xycoord = restore_original_coords(new Point(x, y));
@@ -245,7 +234,7 @@ Project $master.fontname
           y: 500 - xycoord.y,
           source: 'a'
         }, function( data ) {
-          // alert(data);
+          
         });
     }
     currentsegment = currentpointnr = null;
