--- a/templates/view.html
+++ b/templates/view.html
@@ -177,6 +177,7 @@ Project $master.fontname
             };
         }
     }
+    view.draw();
   }
 
   filledges(EDGE_JSON.edges);
@@ -305,6 +306,7 @@ Project $master.fontname
             };
         }
     }
+    view.draw();
   }
 
   filledges(EDGE_JSON.edges);
